<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">快点查天气</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="choose_city">请选择省份/城市</string>
	<string name="spinner_tip1">请选择省份</string>
	<string name="spinner_tip2">请选择城市</string>
	<string name="queryWeather_bt1">查询天气吧</string>
	<string name="queryWeather_bt2">自动定位</string>
	<string name="myTip">这里可以自动获取哦！</string>
</resources>
