<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/set_city_background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/choose_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_horizontal"
            android:text="@string/choose_city"
            android:textSize="28dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:text="省份:"
                android:textSize="28dp" />

            <Spinner
                android:id="@+id/provinces_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/spinner_tip1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:text="城市:"
                android:textSize="28dp" />

            <Spinner
                android:id="@+id/city_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/spinner_tip2" />
        </LinearLayout>

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/queryWeather_bt1"
            android:textSize="25dp" />
    </LinearLayout>

    <Button
        android:id="@+id/getlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:text="@string/queryWeather_bt2"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/tip_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/getlocation"
        android:layout_toLeftOf="@+id/getlocation"
        android:src="@drawable/location_map_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="20dp"
        android:text="@string/myTip"
        android:textColor="@color/darkorange"
        android:textSize="18dp" />

</RelativeLayout>